# rust-ai-demo

./: Cargo.toml
.cargo/: config
src/: dbConnect.rs  main.rs
