[package]
name = "rust-ai-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
chrono-tz = "0.9.0"
clap = { version = "4.5.17", features = ["derive"] }
dialoguer = "0.11.0"
#rusqlite = "0.32.1"
